--- a/hzhzhz/templates/index.html.twig
+++ b/hzhzhz/templates/index.html.twig
@@ -3,34 +3,20 @@
     <head>
         <meta charset="utf-8">
             <title>popajopa</title>
-        <style>
-            @keyframes popa{
-                0%{background-color: #0033B3}
-                50%{background-color: #1b9448}
-                75%{background-color: #70a6fd}
-                100%{background-color: #dd4444;}
-            }
-
-            #circled{
-                width:100px;
-                height:100px;
-                background-color:rebeccapurple;
-                border-radius:50px;
-                transition: 0.7s all;
-                animation-name: popa;
-                animation-duration: 0.1s;
-                animation-iteration-count: infinite;
-            }
-            #circled:hover{
-                width: 400px;
-                height: 400px;
-                background-color: #83122A;
-            }
-        </style>
     </head>
     <body>
         <div id="circled"></div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Количество</th>
+                    <th>Coast</th>
+                </tr>
+            </thead>
+            <tbody>
 
-        {{ name }}
+            </tbody>
+        </table>
     </body>
 </html>
